--- a/StockBand.csproj
+++ b/StockBand.csproj
@@ -14,6 +14,8 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="NAudio" Version="2.1.0" />
+    <PackageReference Include="NAudio.Lame" Version="2.0.1" />
   </ItemGroup>
   <ItemGroup>
     <Content Update="Views\Library\AddTrack.cshtml">
