--- a/StockBand.csproj
+++ b/StockBand.csproj
@@ -25,6 +25,7 @@
     </PackageReference>
     <PackageReference Include="NAudio" Version="2.1.0" />
     <PackageReference Include="NAudio.Lame" Version="2.0.1" />
+    <PackageReference Include="TinyPNG" Version="3.3.3" />
   </ItemGroup>
   <ItemGroup>
     <Content Update="Views\Library\AddTrack.cshtml">
